working on the influence tables

--- a/Table App D.Rmd
+++ b/Table App D.Rmd
@@ -10,12 +10,19 @@ header-includes: \usepackage[labelformat=empty]{caption}
 ```
 
 ```{r funs, echo=FALSE}
+library(mgcv)
 ret <- function(mod, resfun){
     if(resfun=="aic") return(mod$aic)
     if(resfun=="loo") return(SardineForecast:::loogam(mod)$RMSE)
     if(resfun=="r2") return(summary(mod)$r.sq)
   }
 rmyr <- c(1986, 1994)
+Palette4 <- c("#000000", "#999999", "#F0E442", "#D55E00")
+mods <- c("base", "lin(Jul-Sep(t-1))", "gam(Jul-Sep(t-1))", "lin(Jul-Sep(t-1)), lin(Jul-Sep(t-2))", "gam(Jul-Sep(t-1)), gam(Jul-Sep(t-2))", "lin(Oct-Mar(t-1))", "gam(Oct-Mar(t-1))", "lin(Oct-Mar(t-1)), lin(Oct-Mar(t-2))", "gam(Oct-Mar(t-1)), gam(Oct-Mar(t-2))", "lin(Jul-Sep(t-1)), lin(Oct-Mar(t-2))", "gam(Jul-Sep(t-1)), gam(Oct-Mar(t-2))", "lin(Oct-Mar(t-1)), lin(Jul-Sep(t-2))", "gam(Oct-Mar(t-1)), gam(Jul-Sep(t-2))", "lin(Oct-Mar(t-1)), lin(Jul-Sep(t-1))", "gam(Oct-Mar(t-1)), gam(Jul-Sep(t-1))")
+modelset <- mods[c(2,3,5,6,7,9, 11, 13, 15)]
+modelset <- mods[-1]
+aspr <- 3/3
+figh <- 3.5
 ```
 
 ## Validation of the Jul-Sep landings base models
@@ -24,11 +31,11 @@ To evaluate the base model for the Jul-Sep landings using only prior catch as co
 
 In Figure 1D, the $\Delta$AIC values are the AIC minus the AIC of the best model (model with lowest AIC). Models with $\Delta$AIC with 0.5 are similar and "best". Models within 2 of the best models are competitive. Models with $\Delta$AIC greater than 2 are uncompetitive.
 
-The Figure 1D shows that with an year left out the set of models that has the lowest AIC was always GAM with Oct-Mar and Jul-Sep landings in the prior season, GAM with Oct-Mar landings in the prior season, or a linear model with Oct-Mar landings in the prior season. There were cases where deleting a year removed one of these three from the 'best' category, but they were still in the 'competitive category. However, when we look at the Leave-one-out predictive performance (Figure 2D), we see that the additional parameters in the model with Jul-Sep landings reduces the predictive performance. The GAM with Oct-Mar landings in the prior season always has better LOO predictive performance--except when 1994 or 1995 is left out.
+The Figure 1D shows that with any year left out, the set of models that has the lowest AIC was always GAM with Oct-Mar and Jul-Sep landings in the prior season or GAM with only Oct-Mar landings in the prior season. There were cases where deleting a year removed one of these two from the 'best' category, but they were still in the 'competitive category. However, when we look at the Leave-one-out predictive performance (Figure 2D), we see that the GAM with Oct-Mar and Jul-Sep landings in the prior season is better than the GAM with only Oct-Mar landings---except when 1995 or 1987-88 are left out. 
 
-The analysis was repeated with 1994 and 1995 removed (Figure 3D and 4D). GAM with Oct-Mar landings in prior season is the model with lowest AIC and LOO predictive performance is similar for AM with Oct-Mar and Jul-Sep landings in the prior season and GAM with Oct-Mar landings in the prior season. GAM with Oct-Mar landings in the prior season was choosen as the base model for Jul-Sep landings.
+This suggests that the better predictive performance is due to better prediction of 1994-95 or 1987-8.  The covariate analysis also indicated that 1994-95 have a strong influence on the selected models. This is not entirely surprising since 1994 was a year of a severe decline and 1995 a year when the landings rebounded.  The analysis was repeated with 1994 and 1995 removed (Figure 3D and 4D). With these 2 years removed, the GAM with Oct-Mar landings in prior season only is the model with lowest AIC and LOO predictive performance regardless of which year is removed. Thus, the GAM with Oct-Mar landings in the prior season only was choosen as the base model for Jul-Sep landings.
 
-It should be noted that none of the models has a particularly high adjusted R$^2$ (Figure 5D). The values are generally less than 0.3. The Jul-Sep landings tend to be highly variable and not related to the catch in prior years. This is during the monsoon which fishing is not always possible due to sea-state and there is a 6-week fishing ban during this time.
+It should be noted that none of the models has a particularly high adjusted R$^2$ (Figure 5D). The values are generally less than 0.3. The Jul-Sep landings tend to be highly variable and not related to the catch in prior years. Jul-Sep is during the monsoon during which fishing is not always possible due to sea-state and there is a 6-week fishing ban during this time.
 
 ```{r table-appD-spawner, echo=FALSE}
 spawnerinf <- function(rmyr=1900, resfun="aic"){
@@ -113,9 +120,9 @@ return(res)
 }
 ```
 
-```{r appD-spawners-aic, echo=FALSE, fig.cap="Figure 1D. Delta AIC for the Jul-Sep landings base models with one year deleted. Delta AIC is AIC of the model minus the AIC of the best (lowest AIC model) in the set. Pink models are similarly best (with 0.5 AIC of each other). Green are models within 2 of the best model, thus competitive. Deleted year is shown on the x-axis.", fig.width=8, fig.height=8, message=FALSE, warning=FALSE}
+```{r appD-spawners-aic, echo=FALSE, fig.cap="Figure 1D. Delta AIC for the Jul-Sep landings base models with one year deleted. Delta AIC is AIC of the model minus the AIC of the best (lowest AIC model) in the set. Black models were the best models in the set and within 0.5 AIC of each other. Green are models within 2 of the best model, thus competitive to the best models. Deleted year is shown on the x-axis.", fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
 res <- spawnerinf()
-res <- res[-1,]
+res <- res[res$model%in%modelset,]
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[1,2:ncol(res)]),nrow=1)
 delaic=res[,2:ncol(res)]-baseres
 rownames(delaic)=res$model
@@ -133,88 +140,37 @@ levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = DelAIC), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
-```{r appd-spawners-loo, echo=FALSE, fig.cap="Figure 2D. Leave-one-out predictive performance (leave out a year, fit, predict that year) for the Jul-Sep landings base models. The performance (DelLOO) is the RSME (root mean square error) from LOO minus the LOO RSME for the GAM(Oct-Mar(t-1)) model. Thus results are relative to the GAM(Oct-Mar(t-1)) model. Pink is better than this model, blue and purple is worse, and green is similar.", fig.width=8, fig.height=8, message=FALSE, warning=FALSE}
+```{r appd-spawners-loo, echo=FALSE, fig.cap="Figure 2D. Leave-one-out predictive performance (leave out a year, fit, predict that year) for the Jul-Sep landings base models. The performance (DelLOO) is the RSME (root mean square error) from LOO from all models was compared to the LOO RSME for a base model: GAM(Oct-Mar(t-1)). Thus results are relative to the GAM(Oct-Mar(t-1)) model. Black is better predictive performance relative to this model, green is similar, and yellow and orange are worse.", fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
 
 # res2 <- spawnerinf(resfun="loo")
 # res <- nspawnerinf(resfun="loo")
 # save(res, res2, file="basemodsloo.RData")
 load("basemodsloo.RData")
-vals=res2
-vals <- vals[-1,]
-minrow <- apply(vals[2:ncol(vals)],2,function(x){which(x==min(x))})
+vals=res2.all
+vals <- vals[vals$model%in%modelset,]
+minrow <- apply(vals[,2:ncol(vals)],2,function(x){which(x==min(x))})
 baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(minrow,2:ncol(vals))]),nrow=1)
-baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(6,2:ncol(vals))]),nrow=1)
-tmp=vals[,2:ncol(vals)]-baseres
+tmp=vals[,2:ncol(vals)]/baseres
 rownames(tmp)=vals$model
 
 library(tidyverse)
 df <- gather(cbind(model=vals$model, tmp), year, lev, 2:ncol(tmp))
-df$DelLOO <- cut(df$lev, c(-1,-.2,-.1,-.01,0.01,.05,1))
-#levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
+df$DelLOO <- cut(df$lev, c(-.2,-.01,0.01,.05,1))
+df$DelLOO <- cut(df$lev, c(.999,1.01,1.05,1.10,1.2,3))
+levels(df$DelLOO) <- c("Best (< 1%)", "Similar (1-2%)", "Worse (5-10%)", "Much worse (10-20%)", "Worst (>20%)")
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = DelLOO), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=c(Palette4,"red"))
 ```
 
 
-```{r appd-spawners2-aic-9495, echo=FALSE,fig.cap="Figure 3D. Delta AIC for the Jul-Sep landings base models with 1994, 1995 and one other year deleted. Deleted year is shown on the x-axis.", fig.width=8, fig.height=8, message=FALSE, warning=FALSE}
-res <- spawnerinf(c(1994,1995))
-res <- res[-1,]
-
-minrow <- apply(res[2:ncol(res)],2,function(x){which(x==min(x))})
-baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[cbind(minrow,2:ncol(res))]),nrow=1)
-delaic2=res[,2:ncol(res)]-baseres
-delaic2=delaic2[,!(colnames(delaic2)%in%rmyr)]
-rownames(delaic2)=res$model
-
-library(tidyverse)
-df <- gather(cbind(model=res$model, delaic2), year, aic, 2:ncol(delaic2))
-df$DelAIC <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
-levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
-
-p <- ggplot(df, aes(year, model)) +
-  geom_tile(aes(fill = DelAIC), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
-```
-
-```{r appd-spawners-loo-9495, echo=FALSE,fig.cap="Figure 4D. Leave-one-out predictive performance for the Jul-Sep landings base models with 1994 and 1995 removed. See Figure 2D for details on the figure.", fig.width=8, fig.height=8, message=FALSE, warning=FALSE}
-# res2 <- spawnerinf(resfun="loo")
-# res <- nspawnerinf(resfun="loo")
-# save(res, res2, file="basemodsloo.RData")
-load("basemodsloo.RData")
-vals=res2.9495
-vals <- vals[-1,]
-minrow <- apply(vals[2:ncol(vals)],2,function(x){which(x==min(x))})
-baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(minrow,2:ncol(vals))]),nrow=1)
-baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(6,2:ncol(vals))]),nrow=1)
-tmp=vals[,2:ncol(vals)]-baseres
-rownames(tmp)=vals$model
-
-library(tidyverse)
-df <- gather(cbind(model=vals$model, tmp), year, lev, 2:ncol(tmp))
-df$DelLOO <- cut(df$lev, c(-1,-.2,-.1,-.01,0.01,.05,1))
-#levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
-
-p <- ggplot(df, aes(year, model)) +
-  geom_tile(aes(fill = DelLOO), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
-```
-
-
-Because the covariate tests indicated that `r paste(rmyr, collapse=" and ")` `r ifelse(length(rmyr)==1,"is","are")` very influential for the environmental covariates, `r ifelse(length(rmyr)==1,"these years were","this year was")` removed. The Leave-one-out base model selection tests were therefore repeated with 1994 removed. Thus these tests have 1994 and one other year removed. With 1994 only removed, a linear model with Oct-Mar landings in the prior season was the only 'best' model for all but 3 years and for 2 of those 3, it was still within $\Delta$AIC of 2 of the best model and the year where $\Delta$AIC > 2 was 2.71.
-
-
-
-```{r appd-spawners2-aic2, echo=FALSE,fig.cap=paste0("Figure 2D. Delta AIC for the Jul-Sep landings base models with ", paste(rmyr, collapse=" and "), " and one other year deleted. Deleted year is shown on the x-axis."), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r appd-spawners2-aic-9495, echo=FALSE,fig.cap="Figure 3D. Delta AIC for the Jul-Sep landings base models with 1995 and one other year deleted. The deleted year is shown on the x-axis.", fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
 res <- spawnerinf(rmyr)
-res <- res[-1,]
+res <- res[res$model%in%modelset,]
 
 minrow <- apply(res[2:ncol(res)],2,function(x){which(x==min(x))})
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[cbind(minrow,2:ncol(res))]),nrow=1)
@@ -226,27 +182,45 @@ library(tidyverse)
 df <- gather(cbind(model=res$model, delaic2), year, aic, 2:ncol(delaic2))
 df$DelAIC <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
 levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = DelAIC), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
+```{r appd-spawners-loo-9495, echo=FALSE,fig.cap="Figure 4D. Leave-one-out predictive performance for the Jul-Sep landings base models with 1995 removed. See Figure 2D for details on the figure.", fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
+# res2 <- spawnerinf(resfun="loo")
+# res <- nspawnerinf(resfun="loo")
+# save(res, res2, file="basemodsloo.RData")
+load("basemodsloo.RData")
+vals=res2.8694
+vals <- vals[vals$model%in%modelset,]
+minrow <- apply(vals[,2:ncol(vals)],2,function(x){which(x==min(x))})
+baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(minrow,2:ncol(vals))]),nrow=1)
+tmp=vals[,2:ncol(vals)]/baseres
+rownames(tmp)=vals$model
 
-```{r appd-spawners-r2, echo=FALSE,fig.cap=paste0("Figure 5D. R-squared for the Jul-Sep landings base models with one year deleted. Deleted year is shown on the x-axis."), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+library(tidyverse)
+df <- gather(cbind(model=vals$model, tmp), year, lev, 2:ncol(tmp))
+df$DelLOO <- cut(df$lev, c(-.2,-.01,0.01,.05,1))
+df$DelLOO <- cut(df$lev, c(.999,1.01,1.05,1.10,1.2,3))
+levels(df$DelLOO) <- c("Best (< 1%)", "Similar (1-2%)", "Worse (5-10%)", "Much worse (10-20%)", "Worst (>20%)")
+p <- ggplot(df, aes(year, model)) +
+  geom_tile(aes(fill = DelLOO), colour = "grey50")
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=c(Palette4,"red"))
+```
+
+```{r appd-spawners-r2, echo=FALSE,fig.cap=paste0("Figure 5D. R-squared for the Jul-Sep landings base models with one year deleted. The deleted year is shown on the x-axis."), fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
 res <- spawnerinf(resfun="r2")
-res <- res[-1,]
+res <- res[res$model%in%modelset,]
 
 library(tidyverse)
 df <- gather(res, year, lev, 2:ncol(res))
-df$r2 <- cut(df$lev, c(0, .2, .3, .4, .5, .6, .7))
-#levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
+df$r2 <- cut(df$lev, c(0, .3, .5, .6, .7))
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = r2), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
 ```{r, results="asis", echo=FALSE}
@@ -255,7 +229,10 @@ cat("\\clearpage")
 
 ## Validation of the Oct-Mar landings base models
 
-The Figure 3D shows that for Oct-Mar landings the best model was always GAM with Oct-Mar in the prior season and Jul-Sep landings two seasons prior.  Again `r paste(rmyr, collapse=" and ")` `r ifelse(length(rmyr)==1,"was","were")` deleted and the leave-one-out analysis was repeated. The Figure 4D shows the best model is still always GAM with Oct-Mar in the prior season and Jul-Sep landings two seasons prior.
+The Figure 6D shows that for Oct-Mar landings the best model was always GAM with Oct-Mar in the prior season and Jul-Sep landings two seasons prior.  
+
+
+Again `r paste(rmyr, collapse=" and ")` `r ifelse(length(rmyr)==1,"was","were")` deleted and the leave-one-out analysis was repeated. The Figure 4D shows the best model is still always GAM with Oct-Mar in the prior season and Jul-Sep landings two seasons prior.
 
  
 ```{r table-appD-nspawner, echo=FALSE}
@@ -342,14 +319,14 @@ return(res)
 }
 ```
 
-```{r appD-nspawners-aic, echo=FALSE,fig.cap="Figure 3D. Delta AIC for the Oct-Mar landings base models with one year deleted. Deleted year is shown on the x-axis.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r appD-nspawners-aic, echo=FALSE,fig.cap="Figure 6D. Delta AIC for the Oct-Mar landings base models with one year deleted. The deleted year is shown on the x-axis.", fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
 res <- nspawnerinf()
-res <- res[-1,]
+res <- res[res$model%in%modelset,]
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[1,2:ncol(res)]),nrow=1)
 delaic=res[,2:ncol(res)]-baseres
 rownames(delaic)=res$model
 
-minrow <- apply(res[2:ncol(res)],2,function(x){which(x==min(x))})
+minrow <- apply(res[,2:ncol(res)],2,function(x){which(x==min(x))})
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[cbind(minrow,2:ncol(res))]),nrow=1)
 delaic2=res[,2:ncol(res)]-baseres
 rownames(delaic2)=res$model
@@ -358,44 +335,43 @@ library(tidyverse)
 df <- gather(cbind(model=res$model, delaic2), year, aic, 2:ncol(delaic2))
 df$DelAIC <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
 levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = DelAIC), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
-```{r appd-nspawners-loo, echo=FALSE,fig.cap="Figure 5D. Leave-one-out predictive performance for the Out-Mar landings base models.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r appd-nspawners-loo, echo=FALSE,fig.cap="Figure 7D. Leave-one-out predictive performance for the Oct-Mar landings base models.", fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
 # res2 <- spawnerinf(resfun="loo")
 # res <- nspawnerinf(resfun="loo")
 # save(res, res2, file="basemodsloo.RData")
 load("basemodsloo.RData")
-vals=res
-vals <- vals[-1,]
-minrow <- apply(vals[2:ncol(vals)],2,function(x){which(x==min(x))})
+vals=res.all
+vals <- vals[vals$model%in%modelset,]
+#baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(12,2:ncol(vals))]),nrow=1)
+minrow <- apply(vals[,2:ncol(vals)],2,function(x){which(x==min(x))})
 baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(minrow,2:ncol(vals))]),nrow=1)
-baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(6,2:ncol(vals))]),nrow=1)
-tmp=vals[,2:ncol(vals)]-baseres
+tmp=vals[,2:ncol(vals)]/baseres
 rownames(tmp)=vals$model
 
 library(tidyverse)
 df <- gather(cbind(model=vals$model, tmp), year, lev, 2:ncol(tmp))
-df$r2 <- cut(df$lev, c(-1,-.2,-.1,-.01,0.01,.05,1))
-#levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
+df$DelLOO <- cut(df$lev, c(-.01,0.01,.02,.5, 1))
+df$DelLOO <- cut(df$lev, c(.999,1.01,1.05,1.10,1.2,3))
+levels(df$DelLOO) <- c("Best (< 1%)", "Similar (1-2%)", "Worse (5-10%)", "Much worse (10-20%)", "Worst (>20%)")
 
 p <- ggplot(df, aes(year, model)) +
-  geom_tile(aes(fill = r2), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+  geom_tile(aes(fill = DelLOO), colour = "grey50")
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=c(Palette4,"red"))
 ```
 
 
 
-```{r appd-nspawners-cov2, echo=FALSE,fig.cap=paste0("Figure 4D. Delta AIC for the Oct-Mar landings base models with ", paste(rmyr, collapse=" and "), " and one additional year deleted. Deleted year is shown on the x-axis."), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r appd-nspawners-aic2, echo=FALSE,fig.cap=paste0("Figure 8D. Delta AIC for the Oct-Mar landings base models with ", paste(rmyr, collapse=" and "), " and one additional year deleted. Deleted year is shown on the x-axis."), fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
 res <- nspawnerinf(rmyr)
-res <- res[-1,]
+res <- res[res$model%in%modelset,]
 
-minrow <- apply(res[2:ncol(res)],2,function(x){which(x==min(x))})
+minrow <- apply(res[,2:ncol(res)],2,function(x){which(x==min(x))})
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[cbind(minrow,2:ncol(res))]),nrow=1)
 delaic2=res[,2:ncol(res)]-baseres
 rownames(delaic2)=res$model
@@ -405,28 +381,51 @@ library(tidyverse)
 df <- gather(cbind(model=res$model, delaic2), year, aic, 2:ncol(delaic2))
 df$DelAIC <- cut(df$aic, c(-0.001, .5, 2, 4, 30))
 levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = DelAIC), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
+```
+
+```{r appd-nspawners-loo-9495, echo=FALSE,fig.cap=paste0("Figure 9D. Leave-one-out predictive performance for the Oct-Sep landings base models with ", paste(rmyr, collapse=" and "), " and one additional year deleted. See Figure 7D for details on the figure."), fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
+# res2 <- spawnerinf(resfun="loo")
+# res <- nspawnerinf(resfun="loo")
+# save(res, res2, file="basemodsloo.RData")
+load("basemodsloo.RData")
+vals=res.8694
+vals <- vals[vals$model%in%modelset,]
+baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(6,2:ncol(vals))]),nrow=1)
+minrow <- apply(vals[,2:ncol(vals)],2,function(x){which(x==min(x))})
+baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(minrow,2:ncol(vals))]),nrow=1)
+tmp=vals[,2:ncol(vals)]/baseres
+rownames(tmp)=vals$model
+tmp=tmp[,!(colnames(tmp)%in%rmyr)]
+
+
+library(tidyverse)
+tmp <- cbind(model=vals$model, tmp)
+df <- gather(tmp, year, lev, 2:ncol(tmp))
+#df$DelLOO <- cut(df$lev, c(-.01,0.01,.02,.5, 1))
+df$DelLOO <- cut(df$lev, c(.999,1.01,1.05,1.10,1.2,3))
+levels(df$DelLOO) <- c("Best (< 1%)", "Similar (1-2%)", "Worse (5-10%)", "Much worse (10-20%)", "Worst (>20%)")
+p <- ggplot(df, aes(year, model)) +
+  geom_tile(aes(fill = DelLOO), colour = "grey50")
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=c(Palette4,"red"))
 ```
 
 
-```{r appd-nspawners-r2, echo=FALSE,fig.cap=paste0("Figure 5D. R-squared for the Oct-Mar landings base models with ", paste(rmyr, collapse=" and "), " and one additional year deleted. Deleted year is shown on the x-axis."), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
-res <- nspawnerinf(rmyr, resfun="r2")
-res <- res[-1,]
-res=res[,!(colnames(res)%in%rmyr)]
+```{r appd-nspawners-r2, echo=FALSE,fig.cap=paste0("Figure 10D. R-squared for the Oct-Mar landings base models. Deleted year is shown on the x-axis."), fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
+res <- nspawnerinf(resfun="r2")
+res <- res[res$model%in%modelset,]
+#res=res[,!(colnames(res)%in%rmyr)]
 
 library(tidyverse)
 df <- gather(res, year, lev, 2:ncol(res))
-df$r2 <- cut(df$lev, c(0, .2, .3, .4, .5, .6, .7, .8))
-#levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
-#ggplot(df, aes(year, model, fill = aic)) + geom_raster()
+df$r2 <- cut(df$lev, c(0, .3, .5, .6, .7))
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = r2), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
 
