--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 to do
 
+11-13 repeat Table App D with 1956-1983 data.
+update discussion of the years
+
 Create a detailed version of the hypotheses table with references in the appendix.
 Need refs for the cHl section? might already be in intro
 
