--- a/Table App D covariates.Rmd
+++ b/Table App D covariates.Rmd
@@ -16,6 +16,7 @@ header-includes: \usepackage[labelformat=empty]{caption}
     if(resfun=="r2") return(summary(mod)$r.sq)
   }
 rmyr <- c(1987)
+Palette4 <- c("#000000", "#009E73", "#F0E442", "#D55E00")
 ```
 
 ## Validation of the Jul-Sep landings base models
@@ -118,7 +119,7 @@ levels(df$DelAIC) <- c("Large improvement (< -10)", "Improved (-10 to -2)", "No 
 
 p <- ggplot(df, aes(year, model)) +
   geom_tile(aes(fill = DelAIC), colour = "grey50")
-p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3)
+p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = 4/3) + scale_fill_manual(values=Palette4)
 ```
 
 
