add temporary scripts

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,9 @@ to do
 
 11-13 repeat Table App D with 1956-1983 data.
 update discussion of the years
+Redo with AICc
+
+Look at untitled2. choose model based on on mean and median errors with 86 and 94 removed.
 
 Create a detailed version of the hypotheses table with references in the appendix.
 Need refs for the cHl section? might already be in intro
