--- a/Table App D.Rmd
+++ b/Table App D.Rmd
@@ -11,8 +11,10 @@ header-includes: \usepackage[labelformat=empty]{caption}
 
 ```{r funs, echo=FALSE}
 library(mgcv)
+library(SardineForecast)
 ret <- function(mod, resfun){
     if(resfun=="aic") return(mod$aic)
+    if(resfun=="aicc") return(SardineForecast:::AICcgam(mod))
     if(resfun=="loo") return(SardineForecast:::loogam(mod)$RMSE)
     if(resfun=="looMd") return(SardineForecast:::loogam(mod)$MdAE)
     if(resfun=="r2") return(summary(mod)$r.sq)
@@ -22,6 +24,8 @@ Palette4 <- c("#000000", "#999999", "#F0E442", "#D55E00")
 mods <- c("base", "lin(Jul-Sep(t-1))", "gam(Jul-Sep(t-1))", "lin(Jul-Sep(t-1)), lin(Jul-Sep(t-2))", "gam(Jul-Sep(t-1)), gam(Jul-Sep(t-2))", "lin(Oct-Mar(t-1))", "gam(Oct-Mar(t-1))", "lin(Oct-Mar(t-1)), lin(Oct-Mar(t-2))", "gam(Oct-Mar(t-1)), gam(Oct-Mar(t-2))", "lin(Jul-Sep(t-1)), lin(Oct-Mar(t-2))", "gam(Jul-Sep(t-1)), gam(Oct-Mar(t-2))", "lin(Oct-Mar(t-1)), lin(Jul-Sep(t-2))", "gam(Oct-Mar(t-1)), gam(Jul-Sep(t-2))", "lin(Oct-Mar(t-1)), lin(Jul-Sep(t-1))", "gam(Oct-Mar(t-1)), gam(Jul-Sep(t-1))")
 modelset <- mods[c(2,3,5,6,7,9, 11, 13, 15)]
 modelset <- mods[-1]
+modelset <- mods[seq(3,15,2)]
+modelset <- mods[2:13]
 aspr <- 3/3
 figh <- 3.5
 ```
@@ -39,7 +43,7 @@ This suggests that the better predictive performance is due to better prediction
 It should be noted that none of the models has a particularly high adjusted R$^2$ (Figure 5D). The values are generally less than 0.3. The Jul-Sep landings tend to be highly variable and not related to the catch in prior years. Jul-Sep is during the monsoon during which fishing is not always possible due to sea-state and there is a 6-week fishing ban during this time.
 
 ```{r table-appD-spawner, echo=FALSE}
-spawnerinf <- function(rmyr=1900, resfun="aic"){
+spawnerinf <- function(rmyr=1900, resfun="aic", data=dat.nonspawners){
 
   covnames=c("nspawners1", "spawners1",
            "nspawners2", "spawners2")
@@ -48,7 +52,7 @@ modnames=c("Oct-Mar(t-1)", "Jul-Sep(t-1)",
 
 tests=list(c(2),c(2,4),c(1),c(1,3),c(2,3), c(1,4),c(1,2))
 ## SPAWNERS
-dat=dat.spawners
+dat=data
 dat$spawners0[dat$Year%in%rmyr]=NA
 m0 = gam(spawners0 ~ spawners1, data=dat)
 res = data.frame(model="base", None=ret(m0, resfun))
@@ -81,7 +85,7 @@ for(val in tests){
   }
 }
 
-for(yr in 1984:max(dat$Year)){
+for(yr in min(dat$Year):max(dat$Year)){
   bad = yr
   dat2=dat
   dat2$spawners0[dat$Year%in%bad]=NA
@@ -122,7 +126,7 @@ return(res)
 ```
 
 ```{r appD-spawners-aic, echo=FALSE, fig.cap="Figure 1D. Delta AIC for the Jul-Sep landings base models with one year deleted. Delta AIC is AIC of the model minus the AIC of the best (lowest AIC model) in the set. Black models were the best models in the set and within 0.5 AIC of each other. Green are models within 2 of the best model, thus competitive to the best models. Deleted year is shown on the x-axis.", fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
-res <- spawnerinf()
+res <- spawnerinf(resfun="aicc")
 res <- res[res$model%in%modelset,]
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[1,2:ncol(res)]),nrow=1)
 delaic=res[,2:ncol(res)]-baseres
@@ -135,12 +139,12 @@ rownames(delaic2)=res$model
 
 library(tidyverse)
 df <- gather(cbind(model=res$model, delaic2), year, aic, 2:ncol(delaic2))
-df$DelAIC <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
-levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
+df$DelAICc <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
+levels(df$DelAICc) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
 #ggplot(df, aes(year, model, fill = aic)) + geom_raster()
 
 p <- ggplot(df, aes(year, model)) +
-  geom_tile(aes(fill = DelAIC), colour = "grey50")
+  geom_tile(aes(fill = DelAICc), colour = "grey50")
 p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
@@ -170,7 +174,7 @@ p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.rat
 
 
 ```{r appd-spawners2-aic-9495, echo=FALSE,fig.cap="Figure 3D. Delta AIC for the Jul-Sep landings base models with 1995 and one other year deleted. The deleted year is shown on the x-axis.", fig.width=8, fig.height=figh, message=FALSE, warning=FALSE}
-res <- spawnerinf(rmyr)
+res <- spawnerinf(rmyr, resfun="aicc")
 res <- res[res$model%in%modelset,]
 
 minrow <- apply(res[2:ncol(res)],2,function(x){which(x==min(x))})
@@ -212,7 +216,7 @@ p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.rat
 ```
 
 ```{r appd-spawners-r2, echo=FALSE,fig.cap=paste0("Figure 5D. R-squared for the Jul-Sep landings base models with one year deleted. The deleted year is shown on the x-axis."), fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
-res <- spawnerinf(resfun="r2")
+res <- spawnerinf(rmyr, resfun="r2")
 res <- res[res$model%in%modelset,]
 
 library(tidyverse)
@@ -237,7 +241,7 @@ Again `r paste(rmyr, collapse=" and ")` `r ifelse(length(rmyr)==1,"was","were")`
 
  
 ```{r table-appD-nspawner, echo=FALSE}
-nspawnerinf <- function(rmyr=1900, resfun="aic"){
+nspawnerinf <- function(rmyr=1900, resfun="aic", data=dat.nonspawners){
 
   covnames=c("nspawners1", "spawners1",
            "nspawners2", "spawners2")
@@ -246,7 +250,7 @@ modnames=c("Oct-Mar(t-1)", "Jul-Sep(t-1)",
 
 tests=list(c(2),c(2,4),c(1),c(1,3),c(2,3), c(1,4),c(1,2))
 ## SPAWNERS
-dat=dat.nonspawners
+dat=data
 dat$nspawners0[dat$Year%in%rmyr]=NA
 m0 = gam(nspawners0 ~ nspawners1, data=dat)
 res = data.frame(model="base", None=ret(m0, resfun))
@@ -279,7 +283,7 @@ for(val in tests){
   }
 }
 
-for(yr in 1984:max(dat$Year)){
+for(yr in min(dat$Year):max(dat$Year)){
   bad = yr
   dat2=dat
   dat2$nspawners0[dat$Year%in%bad]=NA
@@ -321,7 +325,7 @@ return(res)
 ```
 
 ```{r appD-nspawners-aic, echo=FALSE,fig.cap="Figure 6D. Delta AIC for the Oct-Mar landings base models with one year deleted. The deleted year is shown on the x-axis.", fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
-res <- nspawnerinf()
+res <- nspawnerinf(resfun="aicc")
 res <- res[res$model%in%modelset,]
 baseres=matrix(1,nrow(res),1)%*%matrix(as.numeric(res[1,2:ncol(res)]),nrow=1)
 delaic=res[,2:ncol(res)]-baseres
@@ -334,11 +338,11 @@ rownames(delaic2)=res$model
 
 library(tidyverse)
 df <- gather(cbind(model=res$model, delaic2), year, aic, 2:ncol(delaic2))
-df$DelAIC <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
-levels(df$DelAIC) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
+df$DelAICc <- cut(df$aic, c(-0.001, .5, 2, 4, 100))
+levels(df$DelAICc) <- c("Best (0-0.5)", "Competitive (< 2)", "Uncompetitive (2-4)", "Poor (> 4)")
 
 p <- ggplot(df, aes(year, model)) +
-  geom_tile(aes(fill = DelAIC), colour = "grey50")
+  geom_tile(aes(fill = DelAICc), colour = "grey50")
 p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.ratio = aspr) + scale_fill_manual(values=Palette4)
 ```
 
@@ -369,7 +373,8 @@ p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.rat
 
 
 ```{r appd-nspawners-aic2, echo=FALSE,fig.cap=paste0("Figure 8D. Delta AIC for the Oct-Mar landings base models with ", paste(rmyr, collapse=" and "), " and one additional year deleted. Deleted year is shown on the x-axis."), fig.width=8,fig.height=figh,message=FALSE,warning=FALSE}
-res <- nspawnerinf(rmyr)
+rmyr <- 1994:1995
+res <- nspawnerinf(rmyr, resfun="aicc")
 res <- res[res$model%in%modelset,]
 
 minrow <- apply(res[,2:ncol(res)],2,function(x){which(x==min(x))})
@@ -393,7 +398,7 @@ p + theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1), aspect.rat
 # res <- nspawnerinf(resfun="loo")
 # save(res, res2, file="basemodsloo.RData")
 load("basemodsloo.RData")
-vals=res.8694
+vals=res.86879495
 vals <- vals[vals$model%in%modelset,]
 baseres=matrix(1,nrow(vals),1)%*%matrix(as.numeric(vals[cbind(6,2:ncol(vals))]),nrow=1)
 minrow <- apply(vals[,2:ncol(vals)],2,function(x){which(x==min(x))})
